<resources>
    <string name="app_name">Fizzy-5</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="user_location">User Location</string>
    <string name="my_mart">My Mart</string>
    <string name="my_orders">My Orders</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vendors">Vendors</string>
    <string name="category">Category</string>
    <string name="subCategory">SubCategory</string>
    <string name="products">Products</string>

    <string name="loremp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="name">Name</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="phone_number">Phone Number</string>
    <string name="user">Users</string>
    <string name="myCart">MyCart</string>
    <string name="total">Total :</string>
    <string name="checkout">Checkout</string>
    <string name="order">Order</string>
    <string name="pick_up">Pick Up</string>

    <string-array name="payment_method">
        <item>Credit card</item>
        <item>Debit card</item>
        <item>Wallet</item>
        <item>Pay on delivery</item>
    </string-array>
</resources>
